<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        style="@style/ParentBlackEditText"
        android:id="@+id/etUserName"
        android:hint="@string/username"
        android:inputType="textEmailAddress"/>

    <EditText
        style="@style/ParentBlackEditText"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        style="@style/WrapButton"
        android:id="@+id/loginBtn"
        android:layout_marginTop="10dp"
        android:text="@string/login"/>
    <TextView
        style="@style/ParentBlackTextView"
        android:text="@string/createAccount"
        android:onClick="createNewAccount"/>
</LinearLayout>